[package]
name = "lorenz_cryptography"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ascii_converter = "0.3.0"
rand = "0.8.4"
base64 = "0.21.7"
tungstenite = "0.21.0"
env_logger = "0.11.0"
url = "2.5.0"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
